--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <junit.version>4.12</junit.version>
-
         <kotlin.version>1.3.21</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
+
+        <vaadin.plugin.version>13.0.2</vaadin.plugin.version>
         <vaadin.version>13.0.2</vaadin.version>
     </properties>
 
@@ -27,16 +28,21 @@
             <snapshots><enabled>false</enabled></snapshots>
         </repository>
 
+        <repository>
+            <id>vaadin-addons</id>
+            <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+
         <!-- Repository used by many Vaadin add-ons -->
-        <repository>
-             <id>Vaadin Directory</id>
-             <url>http://maven.vaadin.com/vaadin-addons</url>
-        </repository>
+        <!--<repository>-->
+        <!--<id>Vaadin Directory</id>-->
+        <!--<url>http://maven.vaadin.com/vaadin-addons</url>-->
+        <!--</repository>-->
         <!-- Repository needed for prerelease versions of Vaadin -->
-        <repository>
-            <id>vaadin-prereleases</id>
-            <url>https://maven.vaadin.com/vaadin-prereleases</url>
-        </repository>
+        <!--<repository>-->
+        <!--<id>vaadin-prereleases</id>-->
+        <!--<url>https://maven.vaadin.com/vaadin-prereleases</url>-->
+        <!--</repository>-->
     </repositories>
 
     <pluginRepositories>
@@ -47,11 +53,11 @@
             <snapshots><enabled>false</enabled></snapshots>
         </pluginRepository>
         <!-- Repository needed for prerelease versions of Vaadin -->
-        <pluginRepository>
-            <id>vaadin-prereleases</id>
-            <url>https://maven.vaadin.com/vaadin-prereleases</url>
-            <snapshots><enabled>false</enabled></snapshots>
-        </pluginRepository>
+        <!--<pluginRepository>-->
+        <!--<id>vaadin-prereleases</id>-->
+        <!--<url>https://maven.vaadin.com/vaadin-prereleases</url>-->
+        <!--<snapshots><enabled>false</enabled></snapshots>-->
+        <!--</pluginRepository>-->
     </pluginRepositories>
 
     <dependencyManagement>
@@ -103,10 +109,27 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!--<dependency>-->
+        <!--<groupId>com.vaadin</groupId>-->
+        <!--<artifactId>vaadin-server</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.vaadin</groupId>-->
+        <!--<artifactId>vaadin-push</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.vaadin</groupId>-->
+        <!--<artifactId>vaadin-client-compiled</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.vaadin</groupId>-->
+        <!--<artifactId>flow-server</artifactId>-->
+        <!--<version>1.4.2</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/kotlin</sourceDirectory>
         <plugins>
             <!-- Jetty plugin for easy testing without a server -->
             <plugin>
@@ -117,27 +140,7 @@
                     <scanIntervalSeconds>1</scanIntervalSeconds>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
@@ -159,6 +162,23 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-maven-plugin</artifactId>
+                <version>${vaadin.plugin.version}</version>
+                <executions>
+                    <!--<execution>-->
+                    <!--<goals>-->
+                    <!--<goal>update-theme</goal>-->
+                    <!--<goal>update-widgetset</goal>-->
+                    <!--<goal>compile</goal>-->
+                    <!--&lt;!&ndash; Comment out compile-theme goal to use on-the-fly theme compilation &ndash;&gt;-->
+                    <!--<goal>compile-theme</goal>-->
+                    <!--</goals>-->
+                    <!--</execution>-->
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -172,7 +192,7 @@
                 </property>
             </activation>
             <properties>
-                <vaadin.productionMode>true</vaadin.productionMode>
+                <vaadin.productionMode>false</vaadin.productionMode>
             </properties>
 
             <dependencies>
