--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.39</version>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>com.vaadin</groupId>-->
         <!--<artifactId>vaadin-server</artifactId>-->
